force-app/main/default/objects/DHS_Lead__c/fields/Name_as_listed_on_identification4__c.field-meta.xml
<CustomField>
    <fullName>Name_as_listed_on_identification4__c</fullName>
    <label>Name as listed on identification4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>