force-app/main/default/objects/DHS_Lead__c/fields/Name_DOB_SSN_Diff_No3__c.field-meta.xml
<CustomField>
    <fullName>Name_DOB_SSN_Diff_No3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Has Name DOB SSN Recorded Different No3</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>