force-app/main/default/objects/DHS_Lead__c/fields/Name_DOB_SSN_Diff_Note__c.field-meta.xml
<CustomField>
    <fullName>Name_DOB_SSN_Diff_Note__c</fullName>
    <label>Has Name DOB SSN Recorded Different Note</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>