force-app/main/default/objects/DHS_Lead__c/fields/Name_DOB_SSN_Different2__c.field-meta.xml
<CustomField>
    <fullName>Name_DOB_SSN_Different2__c</fullName>
    <label>Has Name DOB SSN Recorded Different2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>