force-app/main/default/objects/DHS_Lead__c/fields/Name_Source_calls_the_Subject__c.field-meta.xml
<CustomField>
    <fullName>Name_Source_calls_the_Subject__c</fullName>
    <label>Name Source calls the Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>