force-app/main/default/objects/DHS_Lead__c/fields/Narrator_Message__c.field-meta.xml
<CustomField>
    <fullName>Narrator_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Narrator Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>