force-app/main/default/objects/DHS_Lead__c/fields/OTHER_INVESTIGATIONS__c.field-meta.xml
<CustomField>
    <fullName>OTHER_INVESTIGATIONS__c</fullName>
    <label>OTHER INVESTIGATIONS</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>