force-app/main/default/objects/DHS_Lead__c/fields/Passport_Country_of_Issuance__c.field-meta.xml
<CustomField>
    <fullName>Passport_Country_of_Issuance__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Passport Country of Issuance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>