force-app/main/default/objects/DHS_Lead__c/fields/Passport_Document_Number__c.field-meta.xml
<CustomField>
    <fullName>Passport_Document_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Passport Document Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>