force-app/main/default/objects/DHS_Lead__c/fields/PEOPLE_WHO_KNOW_YOU_WELL__c.field-meta.xml
<CustomField>
    <fullName>PEOPLE_WHO_KNOW_YOU_WELL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PEOPLE WHO KNOW YOU WELL</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>