force-app/main/default/objects/DHS_Lead__c/fields/Place_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Birth__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Place of Birth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>