force-app/main/default/objects/DHS_Lead__c/fields/Position_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Position_Job_Title__c</fullName>
    <label>Position/Job Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>