force-app/main/default/objects/DHS_Lead__c/fields/Privacy_Act_Given__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Act_Given__c</fullName>
    <label>Privacy Act Given</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>