force-app/main/default/objects/DHS_Lead__c/fields/Providers_Email__c.field-meta.xml
<CustomField>
    <fullName>Providers_Email__c</fullName>
    <label>Providers Email</label>
    <type>Email</type>
</CustomField>