force-app/main/default/objects/DHS_Lead__c/fields/Purpose_of_Interview__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Interview__c</fullName>
    <label>Purpose of Interview</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>