force-app/main/default/objects/DHS_Lead__c/fields/QA_Rejected_Date__c.field-meta.xml
<CustomField>
    <fullName>QA_Rejected_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>QA Rejected Date</label>
    <type>Date</type>
</CustomField>