force-app/main/default/objects/DHS_Lead__c/fields/QA_Rejection_Comments__c.field-meta.xml
<CustomField>
    <fullName>QA_Rejection_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>QA Rejection Comments</label>
    <type>TextArea</type>
</CustomField>