force-app/main/default/objects/DHS_Lead__c/fields/QA_Rejection_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>QA_Rejection_Complete_Date__c</fullName>
    <label>QA Rejection Complete Date</label>
    <type>Date</type>
</CustomField>