force-app/main/default/objects/DHS_Lead__c/fields/Recommends__c.field-meta.xml
<CustomField>
    <fullName>Recommends__c</fullName>
    <label>Recommends</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Recommends</fullName>
            </value>
            <value>
                <fullName>No reason not to recommend</fullName>
            </value>
            <value>
                <fullName>Does not know well enough to recommend</fullName>
            </value>
            <value>
                <fullName>Does not recommend because</fullName>
            </value>
            <value>
                <fullName>Recommends with reservation because</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>