force-app/main/default/objects/DHS_Lead__c/fields/Record_Provider_City__c.field-meta.xml
<CustomField>
    <fullName>Record_Provider_City__c</fullName>
    <label>Record Provider City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>