force-app/main/default/objects/DHS_Lead__c/fields/Record_Provider_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Record_Provider_Street_Address__c</fullName>
    <label>Record Provider Street Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>