force-app/main/default/objects/DHS_Lead__c/fields/Record_Provider_Zip__c.field-meta.xml
<CustomField>
    <fullName>Record_Provider_Zip__c</fullName>
    <label>Record Provider Zip</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>