force-app/main/default/objects/DHS_Lead__c/fields/Renounce_Foreign_Cit_Reason__c.field-meta.xml
<CustomField>
    <fullName>Renounce_Foreign_Cit_Reason__c</fullName>
    <label>Renounce Foreign DHS_Citizenship Reason</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>