force-app/main/default/objects/DHS_Lead__c/fields/RESIDENCE__c.field-meta.xml
<CustomField>
    <fullName>RESIDENCE__c</fullName>
    <label>RESIDENCE</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>