force-app/main/default/objects/DHS_Lead__c/fields/SELECTIVE_SERVICE_ID__c.field-meta.xml
<CustomField>
    <fullName>SELECTIVE_SERVICE_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SELECTIVE SERVICE ID</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>