force-app/main/default/objects/DHS_Lead__c/fields/SELF_EMPLOYMENT__c.field-meta.xml
<CustomField>
    <fullName>SELF_EMPLOYMENT__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SELF-EMPLOYMENT</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>