force-app/main/default/objects/DHS_Lead__c/fields/Source_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Source_Email_Address__c</fullName>
    <label>Source Email Address</label>
    <type>Email</type>
</CustomField>