force-app/main/default/objects/DHS_Lead__c/fields/Source_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_First_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Source First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>