force-app/main/default/objects/DHS_Lead__c/fields/Source_Organization_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Organization_Name__c</fullName>
    <label>Source Organization Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>