force-app/main/default/objects/DHS_Lead__c/fields/Source_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Source_Street_Address__c</fullName>
    <label>Source Street Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>