force-app/main/default/objects/DHS_Lead__c/fields/Source_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Source_Suffix__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Source Suffix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>