force-app/main/default/objects/DHS_Lead__c/fields/Span_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Span_of_Contact__c</fullName>
    <label>Span of Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>