force-app/main/default/objects/DHS_Lead__c/fields/Span_Of_Treatment_Dates_provided__c.field-meta.xml
<CustomField>
    <fullName>Span_Of_Treatment_Dates_provided__c</fullName>
    <label>Span Of Treatment Dates provided</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>