force-app/main/default/objects/DHS_Lead__c/fields/Span_Of_Treatment_Other_Notes__c.field-meta.xml
<CustomField>
    <fullName>Span_Of_Treatment_Other_Notes__c</fullName>
    <label>Span Of Treatment Other Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>