force-app/main/default/objects/DHS_Lead__c/fields/Standardised_Issue__c.field-meta.xml
<CustomField>
    <fullName>Standardised_Issue__c</fullName>
    <label>Standardised Issues</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>