force-app/main/default/objects/DHS_Lead__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unassigned</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Assigned Not Accepted</fullName>
            </value>
            <value>
                <fullName>Investigator Rejected</fullName>
            </value>
            <value>
                <fullName>In-Progress</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Applied For Waiver</fullName>
            </value>
            <value>
                <fullName>QA Rejected</fullName>
            </value>
            <value>
                <fullName>QA Review Completed</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Discontinued</fullName>
            </value>
            <value>
                <fullName>QA Rejection Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>