force-app/main/default/objects/DHS_Lead__c/fields/Std_Issues_Other_Desc__c.field-meta.xml
<CustomField>
    <fullName>Std_Issues_Other_Desc__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Standardised Issues Other Description</label>
    <type>TextArea</type>
</CustomField>