force-app/main/default/objects/DHS_Lead__c/fields/SUBJ_ETHICAL_BEHAV_JUDGEMENT__c.field-meta.xml
<CustomField>
    <fullName>SUBJ_ETHICAL_BEHAV_JUDGEMENT__c</fullName>
    <label>SUBJECT ETHICAL BEHAVIOUR JUDGEMENT</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>