force-app/main/default/objects/DHS_Lead__c/fields/Subj_Int_Not_Conducted_Reason__c.field-meta.xml
<CustomField>
    <fullName>Subj_Int_Not_Conducted_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Subject Interview Not Conducted Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>