force-app/main/default/objects/DHS_Lead__c/fields/Subject_DOB_Discrepant_Notes__c.field-meta.xml
<CustomField>
    <fullName>Subject_DOB_Discrepant_Notes__c</fullName>
    <label>Subject DOB Discrepant Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>