force-app/main/default/objects/DHS_Lead__c/fields/Subject_Identifiers_Name__c.field-meta.xml
<CustomField>
    <fullName>Subject_Identifiers_Name__c</fullName>
    <label>Subject Identifiers Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Discrepant</fullName>
            </value>
            <value>
                <fullName>Not Shown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>