force-app/main/default/objects/DHS_Lead__c/fields/Subject_Identifiers_SSN__c.field-meta.xml
<CustomField>
    <fullName>Subject_Identifiers_SSN__c</fullName>
    <label>Subject Identifiers SSN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>