force-app/main/default/objects/DHS_Lead__c/fields/Subject_Interview_Observations__c.field-meta.xml
<CustomField>
    <fullName>Subject_Interview_Observations__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Subject Interview Observations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>