force-app/main/default/objects/DHS_Lead__c/fields/subject_loyal_to_united_states__c.field-meta.xml
<CustomField>
    <fullName>subject_loyal_to_united_states__c</fullName>
    <label>subject loyal to united states</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>