force-app/main/default/objects/DHS_Lead__c/fields/Subject_Name_Discrepant_Notes__c.field-meta.xml
<CustomField>
    <fullName>Subject_Name_Discrepant_Notes__c</fullName>
    <label>Subject Name Discrepant Notes</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>