force-app/main/default/objects/DHS_Lead__c/fields/Subject_POB_Discrepant_Notes__c.field-meta.xml
<CustomField>
    <fullName>Subject_POB_Discrepant_Notes__c</fullName>
    <label>Subject POB Discrepant Notes</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>