force-app/main/default/objects/DHS_Lead__c/fields/Subject_SSN_Discrepant_Notes__c.field-meta.xml
<CustomField>
    <fullName>Subject_SSN_Discrepant_Notes__c</fullName>
    <label>Subject SSN Discrepant Notes</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>