force-app/main/default/objects/DHS_Lead__c/fields/Telephone_number__c.field-meta.xml
<CustomField>
    <fullName>Telephone_number__c</fullName>
    <label>Telephone number</label>
    <type>Phone</type>
</CustomField>