force-app/main/default/objects/DHS_Lead__c/fields/Treatment_Dates_Provided_From__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Dates_Provided_From__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Span Of Treatment Dates provided From</label>
    <type>Date</type>
</CustomField>