force-app/main/default/objects/DHS_Lead__c/fields/Treatment_Dates_Provided_To__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Dates_Provided_To__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Span Of Treatment Dates provided To</label>
    <type>Date</type>
</CustomField>