force-app/main/default/objects/DHS_Lead__c/fields/Treatment_From_Date__c.field-meta.xml
<CustomField>
    <fullName>Treatment_From_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Treatment From Date</label>
    <type>Date</type>
</CustomField>