force-app/main/default/objects/DHS_Lead__c/fields/Treatment_Loc_Discrep_Notes__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Loc_Discrep_Notes__c</fullName>
    <label>Treatment Location Discrepant Notes</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>