force-app/main/default/objects/DHS_Lead__c/fields/Type_of_Release__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Release__c</fullName>
    <label>Type of Release</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SF Release</fullName>
            </value>
            <value>
                <fullName>Specific Release</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>