force-app/main/default/objects/DHS_Lead__c/fields/UNEMPLOYMENT__c.field-meta.xml
<CustomField>
    <fullName>UNEMPLOYMENT__c</fullName>
    <label>UNEMPLOYMENT</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>