force-app/main/default/objects/DHS_Lead__c/fields/USE_OF_ALCOHOL__c.field-meta.xml
<CustomField>
    <fullName>USE_OF_ALCOHOL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>USE OF ALCOHOL</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>