force-app/main/default/objects/DHS_Lead__c/fields/Vow_Truth_Unsworn_Decl__c.field-meta.xml
<CustomField>
    <fullName>Vow_Truth_Unsworn_Decl__c</fullName>
    <label>Vow of Truthfulness/Unsworn Declaration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>